# kawai

./: .gitignore  404.html  CLAUDE.md  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  smolagents.txt  test.py
.github/workflows/: check-lint.yml  tests.yml
api_reference/agents/: index.html
api_reference/callbacks/: index.html
api_reference/memory/: index.html
api_reference/models/: index.html
api_reference/tools/: index.html
deployment/: index.html
docs/: deployment.md  index.md
docs/api_reference/: agents.md  callbacks.md  memory.md  models.md  tools.md
examples/: web_search.py  web_search_multiturn.py
kawai/: __init__.py  callback.py  prompts.py  server.py
kawai/agents/: react.py
kawai/memory/: base.py  mem0_memory.py
kawai/models/: openai.py  prompt_cache.py  tool_cache.py
kawai/server/: __init__.py  app.py  models.py  session.py  streaming_callback.py
kawai/tools/: __init__.py  answer.py  base.py  decorator.py  tool.py  web_search.py
search/: search_index.json
tests/: test_tools.py
